# is-thirteen-native

./: .gitignore  AUTHORS  Makefile.in  README  README.md  config.h.in  configure  configure.ac  libtool
src/lib/: Makefile.am  Makefile.in  isthirteen.c  isthirteen.h  isthirteen_strings.h
