AM_CFLAGS = -std=c99 -Wall
lib_LTLIBRARIES = libisthirteen.la
include_HEADERS = isthirteen.h isthirteen_strings.h

# The files to add to the library and to the source distribution
libisthirteen_la_SOURCES = \
                         $(libisthirteen_a_HEADERS) \
                         isthirteen.c

libisthirteen_la_LDFLAGS = -version-info 0:0:0
